Enhanced API Testing

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       the REST API.
       <br />
       <br />  
-      See the console for output as the process completes.
+      Results of the API test will appear below.  See the console for more detailed output as the process completes.
       </p>
       <div class="row">
         <div class="col-md-8 col-md-offset-3">
@@ -27,8 +27,8 @@
         </div>
       </div>
       <hr class="border border-primary border-3 opacity-75"/>
-      <div id = "test-results">
-        
+      <div id = "test_results">
+        <!-- placeholder to insert results from the API test -->
       </div>
     </div>
     <script type="text/javascript" src="js/api-async-await.js"></script>
